# biocomputation

./: pyproject.toml
biocomputation/: dataset_1_2_ann.ipynb  dataset_1_2_knn.ipynb  dataset_3_rf.ipynb
biocomputation/data/: dataset_1.csv  dataset_2.csv  dataset_3.csv
