[tool.poetry]
name = "biocomputation"
version = "0.1.0"
description = ""
authors = ["Naffah Abdulla Rasheed <mail@naffah.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
icecream = "^2.1.3"
matplotlib = "^3.9.1"
sklearn-genetic-opt = "^0.10.1"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
